# changex

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml  release-desktop.yml  release-quicklook.yml  release-winpreview.yml
docs/: ARCHITECTURE.md  CALL-FROM-YOUR-APP.md  CHANGEX_FORMAT.md  CI-AND-SECRETS.md  CLAUDE-SETUP.md  FIDELITY.md  INSTALL.md  INTEGRATION.md  LOCAL-ACCESS.md  ROADMAP.md
examples/: sample.docx  track_docx.py
integrations/: gemini-functions.json  openai-functions.json  openapi.json
scripts/: demo.sh  demo_all_formats.py  make_sample_docx.py  make_screenshots.py  make_screenshots.sh
skill/: SKILL.md
tests/: conftest.py  test_api.py  test_connect.py  test_csv_adapter.py  test_doc_convert.py  test_doctor.py  test_document_render.py  test_docx_adapter.py  test_docx_roundtrip.py  test_docx_roundtrip_libreoffice.py  test_journal.py  test_mcp_accept_reject.py  test_mcp_http.py  test_mcp_read_node.py  test_md_adapter.py  test_passive_seal.py  test_pptx_adapter.py  test_preview.py  test_quicklook.py  test_reserved_ops.py  test_save_and_verify.py  test_view_server.py  test_xlsx_adapter.py
